# udv_service_desk

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg  test.db
src/: app.py  errors.py  service.py
src/accounts/: api.py
src/accounts/client_account/: models.py  routers.py  schemas.py  services.py
src/accounts/developer_account/: routers.py  services.py
src/accounts/developer_account/statistics/: routers.py  schemas.py  services.py
src/accounts/employee_account/: routers.py  services.py
src/client_account/: models.py  routers.py  schemas.py  services.py
src/db/: base.py  db.py
src/desk/: dev_routes.py  models.py  routes.py  schemas.py  services.py
src/reference_book/: models.py  schemas.py  services.py
src/reference_book/api/: licence.py  module.py  routes.py  software.py
src/users/: logic.py  models.py  routers.py  routes.py  schemas.py
tests/: test_home.py
tests/tests_reference_book/: test_add.py  test_get.py  test_routes.py
