[tool.poetry]
name = "udv_service_desk"
version = "0.1.0"
description = ""
authors = ["Puzanovim <puzanovim@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
pyformat = "^0.7"
flake8 = "^3.9.0"
pylint = "^2.7.4"
black = "^20.8b1"
databases = "^0.4.3"
aiosqlite = "^0.17.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^6.0.0"}
pytest-asyncio = "^0.15.1"
httpx = "^0.17.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
